kubernetes/gcp/k8s-explorer.yaml
# YAML for launching the orderer
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: explorer
  labels:
    app: explorer
spec:
  serviceName: explorer
  replicas: 1
  selector:
    matchLabels:
      app: explorer
  template:
    metadata:
      labels:
        app: explorer
    spec:
      containers:
      - name: postgres
        # Image used
        image: zainabm/explorer:1.0
        volumeMounts:
        - name: explorer
          mountPath: /var/ledger
        ports:
        - containerPort: 5432
  volumeClaimTemplates:
  - metadata: 
      name: explorer
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: general
      resources:
        requests:
          storage: 1Gi

---
# Expose the port 7054 as ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: explorer-clusterip

spec:
  selector:
    app: explorer

  ports:
    - name: explorer-clusterip
      port: 5432

  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: explorer-nodeport

spec:
  selector:
    app: explorer

  ports:
    - name: explorer-nodeport
      port: 8080
      targetPort: 8080
      nodePort: 30080

  type: LoadBalancer
