kubernetes/gcp/k8s-explorerdb.yaml
# YAML for launching the orderer
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: explorerdb
  labels:
    app: explorerdb
spec:
  serviceName: explorerdb
  replicas: 1
  selector:
    matchLabels:
      app: explorerdb
  template:
    metadata:
      labels:
        app: explorerdb
    spec:
      containers:
      - name: postgres
        # Image used
        image: zainabm/explorerdb:1.0
        # image: hyperledger/explorer-db:latest
        volumeMounts:
        - name: explorerdb
          mountPath: /var/ledger
        ports:
        - containerPort: 7054
  volumeClaimTemplates:
  - metadata: 
      name: explorerdb
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: general
      resources:
        requests:
          storage: 1Gi

---
# Expose the port 7054 as ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: explorerdb-clusterip

spec:
  selector:
    app: explorerdb

  ports:
    - name: explorerdb-clusterip
      port: 5432

  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: explorerdb-nodeport

spec:
  selector:
    app: explorerdb

  ports:
    - name: explorerdb-nodeport
      port: 5432
      targetPort: 5432
      nodePort: 30432

  type: LoadBalancer
