kubernetes/gcp/k8s-prometheus.yaml
# YAML for launching the orderer
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        # Image used
        image: zainabm/prometheus:1.0
        volumeMounts:
        - name: prometheus
          mountPath: /var/ledger
        ports:
        - containerPort: 9090
  volumeClaimTemplates:
  - metadata: 
      name: prometheus
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: general
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-clusterip

spec:
  selector:
    app: prometheus

  ports:
    - name: prometheus-clusterip
      port: 9090

  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport

spec:
  selector:
    app: prometheus

  ports:
    - name: prometheus-nodeport
      port: 9090
      targetPort: 9090
      nodePort: 30990

  type: LoadBalancer
