kubernetes/gcp/k8s-siliconvalley-blockchain.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: beyondewallet-app
  labels:
    app: beyondewallet-app
spec:
  serviceName: beyondewallet-app
  replicas: 1
  selector:
    matchLabels:
      app: beyondewallet-app
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: beyondewallet-app  
    spec:     # pod spec                  
      containers: 
      - name: beyondewallet-app
        image: zainabm/k8s-beyondewallet-blockchain:1.0 # image we pushed
        command: ['sh','-c','node enrollAdmin.js && node registerUser.js && node server.js']
        # imagePullPolicy: Never
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: beyondewallet-app-pvc
          mountPath: /var/app
      - name: beyondewallet-ipfs
        image: ipfs/go-ipfs
        imagePullPolicy: IfNotPresent
        readinessProbe:
          # exec:
          #   command:
          #     - HASH=ipfs add  -q
          httpGet:
            path: /ipfs/QmYwAPJzv5CZsnA625s3Xf2nemtYgPpHdWEz79ojWnPbdG/readme
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 4001 # ipfs swarm
#       - containerPort: 4002 # udp swarm
        - containerPort: 5001 # expose if needed/wanted
        - containerPort: 8080 # exposes if needed/wanted 
        volumeMounts:
        - name: beyondewallet-app-pvc
          mountPath: /var/ipfs
  volumeClaimTemplates:
  - metadata: 
      name: beyondewallet-app-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: general
      resources:
        requests:
          storage: 1Gi

---
# Expose the port 30751 as node port -  NEEDED if you
# are interested in connecting to the Pods from the Host
# machine - keep in mind you would need the IP for the node
# port service
apiVersion: v1
kind: Service
metadata:
  name: beyondewallet-app-clusterip

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: beyondewallet-app

  ports:
    - name: beyondewallet-app-clusterip
      port: 8000
    # - name: beyondewallet-ipfs-clusterip
    #   port: 4001
    - name: beyondewallet-app-ipfs-api-clusterip
      port: 5001
    - name: beyondewallet-app-ipfs-gateway-clusterip
      port: 8080

  type: ClusterIP

---
# Expose the port 30751 as node port -  NEEDED if you
# are interested in connecting to the Pods from the Host
# machine - keep in mind you would need the IP for the node
# port service
apiVersion: v1
kind: Service
metadata:
  name: beyondewallet-app-nodeport

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: beyondewallet-app

  ports:
    - name: beyondewallet-app-nodeport
      port: 8000
      targetPort: 8000
      nodePort: 30800
    ## not needed now, uncomment if needed
    - name: beyondewallet-ipfs-api-nodeport
      port: 5001
      targetPort: 5001
      nodePort: 30501
    - name: beyondewallet-ipfs-gateway-nodeport
      port: 8080
      targetPort: 8080
      nodePort: 30880

  type: NodePort
