kubernetes/gcp/k8s-siliconvalley-orderer5.yaml
# YAML for launching the orderer
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: siliconvalley-orderer5
  labels:
    app: siliconvalley-orderer5
spec:
  serviceName: orderer5
  # Single instance of the Orderer Pod is needed
  replicas: 1
  selector:
    matchLabels:
      app: siliconvalley-orderer5
  template:
    metadata:
      labels:
        app: siliconvalley-orderer5
    spec:
      containers:
      - name: siliconvalley-orderer5

        # Image used
        image: zainabm/k8s-hlf-siliconvalley-orderer5:1.0

        # Uncomment the following during development/testing of the image
        # imagePullPolicy: Always
        ports:
        - containerPort: 30750
        volumeMounts:
        # This is pointing to the PVC
        - name: orderer5-ledger
          mountPath: /var/ledger

  volumeClaimTemplates:
  - metadata: 
      name: orderer5-ledger
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: general
      resources:
        requests:
          storage: 1Gi

---
# Expose the port 7050 as ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: siliconvalley-orderer5-clusterip

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: siliconvalley-orderer5

  ports:
    - name: siliconvalley-orderer5-clusterip
      port: 30750

  type: ClusterIP

---
# Expose the port 30750 as node port - NEEDED if you
# are interested in connecting to the Pods from the Host
# machine - keep in mind you would need the IP for the node
# port service
apiVersion: v1
kind: Service
metadata:
  name: siliconvalley-orderer5-nodeport

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: siliconvalley-orderer5

  ports:
    - name: siliconvalley-orderer5-nodeport
      port: 30750
      nodePort: 31150

  type: NodePort
