kubernetes/gcp/k8s-siliconvalley-peer.yaml
# YAML for launching the orderer
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: siliconvalley-peer
  labels:
    app: siliconvalley-peer
spec:
  serviceName: siliconvalley-peer
  replicas: 1
  selector:
    matchLabels:
      app: siliconvalley-peer
  template:
    metadata:
      labels:
        app: siliconvalley-peer
    spec:
      containers:
      - name: siliconvalley-peer
        # Image used
        image: zainabm/k8s-hlf-siliconvalley-peer:1.0
        # Uncomment the following during development/testing of the image
        # imagePullPolicy: Always
        volumeMounts:
        - name: siliconvalley-peer-ledger
          mountPath: /var/ledger
        - name: dockersock
          mountPath: /var/run/docker.sock
        ports:
        - containerPort: 30751
        - containerPort: 30752
        - containerPort: 9443
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
  volumeClaimTemplates:
  - metadata: 
      name: siliconvalley-peer-ledger
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: general
      resources:
        requests:
          storage: 1Gi

---
# Expose the port 7051 as ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: siliconvalley-peer-clusterip

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: siliconvalley-peer

  ports:
    - name: siliconvalley-peer-clusterip
      port: 30751
    - name: siliconvalley-peer-cc-clusterip
      port: 30752
    - name: siliconvalley-peer-event-clusterip
      port: 7053
    - name: siliconvalley-peer-prometheus-clusterip
      port: 9443

  type: ClusterIP

---
# Expose the port 30751 as node port -  NEEDED if you
# are interested in connecting to the Pods from the Host
# machine - keep in mind you would need the IP for the node
# port service
apiVersion: v1
kind: Service
metadata:
  name: siliconvalley-peer-nodeport

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: siliconvalley-peer

  ports:
    - name: siliconvalley-peer-nodeport-751
      port: 31751
      targetPort: 30751
      nodePort: 30751
    - name: siliconvalley-peer-cc-nodeport-752
      port: 32752
      targetPort: 30752
      nodePort: 30752
    - name: siliconvalley-peer-prometheus-nodeport
      port: 9443
      targetPort: 9443
      nodePort: 30943

  type: NodePort
