kubernetes/gcp/k8s-siliconvalley-peer1.yaml
# YAML for launching the orderer
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: siliconvalley-peer1
  labels:
    app: siliconvalley-peer1
spec:
  serviceName: siliconvalley-peer1
  replicas: 1
  selector:
    matchLabels:
      app: siliconvalley-peer1
  template:
    metadata:
      labels:
        app: siliconvalley-peer1
    spec:
      containers:
      - name: siliconvalley-peer1
        # Image used
        image: zainabm/k8s-hlf-siliconvalley-peer1:1.0
        # Uncomment the following during development/testing of the image
        # imagePullPolicy: Never # Always
        volumeMounts:
        - name: siliconvalley-peer1-ledger
          mountPath: /var/ledger
        - name: dockersock
          mountPath: /var/run/docker.sock
        ports:
        - containerPort: 30751
        - containerPort: 30752
        - containerPort: 9443
      - name: siliconvalley-couchdb1
        # Image used
        image: hyperledger/fabric-couchdb:0.4.18
        # Uncomment the following during development/testing of the image
        # imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5984
        volumeMounts:
        - name: siliconvalley-peer1-ledger
          mountPath: /var/db
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
  volumeClaimTemplates:
  - metadata: 
      name: siliconvalley-peer1-ledger
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: general
      resources:
        requests:
          storage: 1Gi

---
# Expose the port 7051 as ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: siliconvalley-peer1-clusterip

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: siliconvalley-peer1

  ports:
    - name: siliconvalley-peer1-clusterip
      port: 30751
    - name: siliconvalley-peer1-cc-clusterip
      port: 30752
    - name: siliconvalley-peer1-event-clusterip
      port: 7053
    - name: siliconvalley-peer1-prometheus-clusterip
      port: 9443
    - name: siliconvalley-peer1-couchdb-clusterip
      port: 5984

  type: ClusterIP

---
# Expose the port 30751 as node port -  NEEDED if you
# are interested in connecting to the Pods from the Host
# machine - keep in mind you would need the IP for the node
# port service
apiVersion: v1
kind: Service
metadata:
  name: siliconvalley-peer1-nodeport

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: siliconvalley-peer1

  ports:
    - name: siliconvalley-peer1-nodeport-751
      port: 31751
      targetPort: 30751
      nodePort: 30751
    - name: siliconvalley-peer1-cc-nodeport-752
      port: 32752
      targetPort: 30752
      nodePort: 30752
    - name: siliconvalley-peer1-prometheus-nodeport
      port: 9443
      targetPort: 9443
      nodePort: 30943
    - name: siliconvalley-peer1-couchdb-nodeport
      port: 5984
      targetPort: 5984
      nodePort: 30984

  type: NodePort
