kubernetes/gcp/k8s-siliconvalley-peer2.yaml
# YAML for launching the orderer
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: siliconvalley-peer2
  labels:
    app: siliconvalley-peer2
spec:
  serviceName: siliconvalley-peer2
  replicas: 1
  selector:
    matchLabels:
      app: siliconvalley-peer2
  template:
    metadata:
      labels:
        app: siliconvalley-peer2
    spec:
      containers:
      - name: siliconvalley-peer2
        # Image used
        image: zainabm/k8s-hlf-siliconvalley-peer2:1.0
        # Uncomment the following during development/testing of the image
        # imagePullPolicy: Never # Always
        volumeMounts:
        - name: siliconvalley-peer2-ledger
          mountPath: /var/ledger
        - name: dockersock
          mountPath: /var/run/docker.sock
        ports:
        - containerPort: 30851
        - containerPort: 30852
        - containerPort: 9443
      - name: siliconvalley-couchdb2
        # Image used
        image: hyperledger/fabric-couchdb:0.4.18
        # Uncomment the following during development/testing of the image
        # imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5984
        volumeMounts:
        - name: siliconvalley-peer2-ledger
          mountPath: /var/db
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
  volumeClaimTemplates:
  - metadata: 
      name: siliconvalley-peer2-ledger
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: general
      resources:
        requests:
          storage: 1Gi

---
# Expose the port 7051 as ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: siliconvalley-peer2-clusterip

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: siliconvalley-peer2

  ports:
    - name: siliconvalley-peer2-clusterip
      port: 30851
    - name: siliconvalley-peer2-cc-clusterip
      port: 30852
    - name: siliconvalley-peer2-event-clusterip
      port: 8053
    - name: siliconvalley-peer2-prometheus-clusterip
      port: 9443
    - name: siliconvalley-peer2-couchdb-clusterip
      port: 5984

  type: ClusterIP

---
# Expose the port 30751 as node port -  NEEDED if you
# are interested in connecting to the Pods from the Host
# machine - keep in mind you would need the IP for the node
# port service
apiVersion: v1
kind: Service
metadata:
  name: siliconvalley-peer2-nodeport

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: siliconvalley-peer2

  ports:
    - name: siliconvalley-peer2-nodeport-751
      port: 31851
      targetPort: 30851
      nodePort: 30851
    - name: siliconvalley-peer2-cc-nodeport-752
      port: 32852
      targetPort: 30852
      nodePort: 30852
    - name: siliconvalley-peer2-prometheus-nodeport
      port: 9443
      targetPort: 9443
      nodePort: 31943
    - name: siliconvalley-peer2-couchdb-nodeport
      port: 5984
      targetPort: 5984
      nodePort: 31984

  type: NodePort
